
2017-06-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added .PHONY to correctly declare logical targets that
	  always have to be executed and don't result in a file
	* Makefile.am: fixing tests with newcob.val in all possible VPATH
	  entries by using the prerequisite's path directly in the Makefile
	  and with ASSIGN variable for EXEC85
	* Makefile.am: always build all test module folders,
	  even if they aren't tested
	* Makefile.am: allow parallel testing of modules
	* Makefile.am, summary.txt: moved IX to end of tests to have the same
	  order with DBNOIX

2017-05-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* report.pl: redirect stderr to /dev/null if to_kill is requested

2017-04-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: HACK for newcob.val in sourcedir during VPATH build

2017-03-19  Edward Hart <edward.dan.hart@gmail.com>

	* report.pl, EXEC85.conf.in: fixed bug #363: redefining filename (viz.
	  "report.log") as variable is not portable.
	* report.pl, summary.pl: fixed warnings and added "use warnings;" and
	  "use strict;" directives.

2017-01-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* report.pl: replaced fifo by sysin redirection and new kill sequence

2016-12-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* report.pl: fixing running the suite from shared file systems by
	  moving fifo to tempdir (where creation of fifo should always be possible)
	* report.pl, NC.txt: automated "manual investigations"
	* report.pl: moved test specific compilation flags to $cobc_flags
	  and show them on command line,
	  create report.log directly with test specific name

2016-12-14  Edward Hart <edward.dan.hart@gmail.com>

	* report.pl, *.txt: compile only tests no longer
	  increment the successful test counter, as this is for runtime tests
	* report.pl: allow passing input to programs (e.g. for those